--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   }
 }
