--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "firebase": "^9.9.2",
     "google-auth-library": "^8.1.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.2.10",
     "path": "^0.12.7",
     "shortid": "^2.2.16"
   }
