--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.2.10",
-    "path": "^0.12.7",
-    "shortid": "^2.2.16"
+    "path": "^0.12.7"
   }
 }
