--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "express": "^4.18.1",
     "firebase": "^9.9.2",
     "google-auth-library": "^8.1.1",
+    "http": "^0.0.1-security",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "url": "^0.11.0"
   }
 }
