--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "firebase": "^9.9.2",
     "google-auth-library": "^8.1.1",
     "http": "^0.0.1-security",
