--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.8",
+    "otp-generator": "^4.0.0",
     "path": "^0.12.7",
     "url": "^0.11.0"
   }
