--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = 4000
-DB_BASE_URL = "mongodb://localhost:27017/single_vendor_ecommerce"
+PORT = 4100;
+DB_BASE_URL = "mongodb://localhost:27017/single_vendor_ecommerce";
 SECRET = "QUASIS_TECH";
