--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = 4300;
-DB_BASE_URL = "mongodb://localhost:27017/single_vendor_ecommerce";
+PORT = 5000;
+DB_BASE_URL = "mongodb://127.0.0.1:27017/single_vendor_ecommerce";
 SECRET = "QUASIS_TECH";
